--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
    <!-- Inside the head tag we will define all the information the browser needs in order to start interpreting the page. -->
    </head>
    <body>
-    <p>Hola YAS ZODAadsasdas</p>
+    <p>Hola YAS</p>
 </body>
 </html>
